    0.46 (whose backward compatibility mode is buggy).

  Test suite enhancements:

  * Test::UBH always uses an environment variable for a part of the
    configuration file and hence tests the new feature mentioned above.
  * Skip tests which involve the non-readabliity of files if run as
    root. (Closes: #789832)
  * Catch some more cases of minor differences in output.

  Packaging, build system, documentation and file layout changes:

  * Change section from x11 to utils. It's far more than just an Xsession
    hook nowadays.
  * Declare compliance with Debian Policy 3.9.6 (no other changes needed)
  * Update copyright years in debian/copyright.
  * Rename debian/unburden-home-dir.* to debian/* for consistency.
  * Extract common logic for Xsession.d files into a separate file.
  * README.md, debian/copyright: take into account that Gitorious closes.
  * Split up documentation into several Markdown files in a separate
    directory. Support mkdocs to generate HTML documents from them.
    + Add build-dependency on mkdocs and moreutils (for sponge).
    + No more install README.md as documentation.
    + Drop override for dh_installdocs.
    + Register them with doc-base.
  * Generate man pages from Markdown, too, using ronn.
    + Add ruby-ronn as build-dependency.
  * Use "gzip -n" to make sure the build stays reproducible.
  * Support build profiles nocheck and nodoc.
    + Bump debhelper build-dependency to ≥ 9.20141010
    + Add build-dependency on dpkg-dev ≥ 1.17.14.

 -- Axel Beckert <abe@debian.org>  Fri, 13 Mar 2015 13:11:26 +0100

unburden-home-dir (0.3.3) unstable; urgency=medium

  * Enhancements:
    + Warnings in case of unreadable list files
  * Bugfixes:
    + Fix broken behaviour upon trailing blank in list file.
    + Fix broken -f parameter parsing.
    + Remove unreachable subroutine unknown_element and some other
      unreachable code fragments. Yay for coverage tests!
  * Test suite enhancements: