@@ -32,6 +32,8 @@ unburden-home-dir (0.4~dev) UNRELEASED; urgency=medium
   * Skip tests which involve the non-readabliity of files if run as
     root. (Closes: #789832)
   * Catch some more cases of minor differences in output.
+  * Fix race-condition in t/expand_environment_variables.t and
+    t/moving-to-existing-subdir.t by enforcing older mtime.
 
   Packaging, build system, documentation and file layout changes:
 
